# HomelabSage

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
docs/: 2026-05-12-ui-and-roadmap-decisions.md  plugin-sdk.md
notes/: example.md
src/homelabsage/: __init__.py  cli.py  config.py  config_overlay.py  curator.py  db.py  engine.py  enrichment.py  github.py  images.py  llm.py  models.py  notes.py  redact.py  registries.py  scripts.py  web.py
src/homelabsage/curator/: __init__.py  core.py  helpers.py  incremental.py  prompts.py
src/homelabsage/outputs/: __init__.py  notion.py  telegram.py
src/homelabsage/plugins/: __init__.py  docker.py  fedora.py  homeassistant.py
src/homelabsage/templates/: _base.html  _interview_banner.html  _provider_presets_script.html  _settings_fields.html  _settings_form.html  _settings_test_result.html  _widget_cron.html  _widget_path.html  _widget_timezone.html  index.html  interview_list.html  llm_profiles.html  notes_edit.html  notes_list.html  settings_block.html  settings_index.html  wizard.html
src/homelabsage/web/: __init__.py  auth.py  csrf.py  lifecycle.py  routes_health.py  routes_interview.py  routes_llm_profiles.py  routes_notes.py  routes_settings.py  routes_settings_html.py  routes_settings_test.py  routes_updates.py  routes_wizard.py
tests/: test_config.py  test_config_overlay.py  test_csrf.py  test_curator.py  test_curator_incremental.py  test_db.py  test_docker_plugin.py  test_enrichment.py  test_github.py  test_images.py  test_llm.py  test_llm_profiles.py  test_models.py  test_notes.py  test_plugin_fedora.py  test_redact.py  test_registries.py  test_routes_interview.py  test_routes_settings.py  test_routes_settings_html.py  test_routes_settings_test.py  test_routes_wizard.py  test_scripts.py  test_web.py
