[project]
name = "homelabsage"
version = "0.2.0"
description = "AI-powered homelab analyzer, update tracker and improvement advisor"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.11"
authors = [{ name = "Javier López", email = "jlp9989@gmail.com" }]
keywords = ["homelab", "docker", "homeassistant", "updates", "ai", "llm", "ollama"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "packaging>=24.0",
    "apscheduler>=3.10",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "docker>=7.0",
    "python-multipart>=0.0.9",
    # Bundled tzdata so the timezone validator works on minimal OS images
    # (Alpine, distroless, Windows) where the system tz database is absent.
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
homelabsage = "homelabsage.cli:app"

[project.urls]
Homepage = "https://github.com/jlp9989-sudo/HomelabSage"
Issues = "https://github.com/jlp9989-sudo/HomelabSage/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/homelabsage"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
